# learn_dev_tools_basic-project

./: README-ORIGINAL.md  pyproject.toml
.claude/: settings.json
docs/: greet-script-notes.md
script/: greet.py
