[project]
name = "learn_dev_tools_basic"
version = "0.1.1"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["learn_dev_tools_basic*"]
exclude = [
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
